cmake_minimum_required(VERSION 3.2)
project(Engine)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    3rdparty/lea_malloc/leamalloc.c
    3rdparty/lea_malloc/leamalloc.h
    3rdparty/Lua/lapi.c
    3rdparty/Lua/lapi.h
    3rdparty/Lua/lauxlib.c
    3rdparty/Lua/lauxlib.h
    3rdparty/Lua/lbaselib.c
    3rdparty/Lua/lbitlib.c
    3rdparty/Lua/lcode.c
    3rdparty/Lua/lcode.h
    3rdparty/Lua/lcorolib.c
    3rdparty/Lua/lctype.c
    3rdparty/Lua/lctype.h
    3rdparty/Lua/ldblib.c
    3rdparty/Lua/ldebug.c
    3rdparty/Lua/ldebug.h
    3rdparty/Lua/ldo.c
    3rdparty/Lua/ldo.h
    3rdparty/Lua/ldump.c
    3rdparty/Lua/lfunc.c
    3rdparty/Lua/lfunc.h
    3rdparty/Lua/lgc.c
    3rdparty/Lua/lgc.h
    3rdparty/Lua/linit.c
    3rdparty/Lua/liolib.c
    3rdparty/Lua/llex.c
    3rdparty/Lua/llex.h
    3rdparty/Lua/llimits.h
    3rdparty/Lua/lmathlib.c
    3rdparty/Lua/lmem.c
    3rdparty/Lua/lmem.h
    3rdparty/Lua/loadlib.c
    3rdparty/Lua/lobject.c
    3rdparty/Lua/lobject.h
    3rdparty/Lua/lopcodes.c
    3rdparty/Lua/lopcodes.h
    3rdparty/Lua/loslib.c
    3rdparty/Lua/lparser.c
    3rdparty/Lua/lparser.h
    3rdparty/Lua/lstate.c
    3rdparty/Lua/lstate.h
    3rdparty/Lua/lstring.c
    3rdparty/Lua/lstring.h
    3rdparty/Lua/lstrlib.c
    3rdparty/Lua/ltable.c
    3rdparty/Lua/ltable.h
    3rdparty/Lua/ltablib.c
    3rdparty/Lua/ltm.c
    3rdparty/Lua/ltm.h
    3rdparty/Lua/lua.c
    3rdparty/Lua/lua.h
    3rdparty/Lua/lua.hpp
    3rdparty/Lua/luac.c
    3rdparty/Lua/luaconf.h
    3rdparty/Lua/lualib.h
    3rdparty/Lua/lundump.c
    3rdparty/Lua/lundump.h
    3rdparty/Lua/lvm.c
    3rdparty/Lua/lvm.h
    3rdparty/Lua/lzio.c
    3rdparty/Lua/lzio.h
    3rdparty/TLSF/tlsf.c
    3rdparty/TLSF/tlsf.h
    3rdparty/TLSF/tlsfbits.h
    include/AI/Pathing/icAStar.h
    include/AI/Pathing/icAStarCommon.h
    include/AI/Pathing/icPathingSystemI.h
    include/AI/Pathing/icThetaStar.h
    include/AI/Pathing/icThetaStarCommon.h
    include/AI/Pathing/icVisibilityAStar.h
    include/Audio/icSound.h
    include/Audio/icSoundAL.h
    include/Audio/icSoundHeader.h
    include/Content/icContentLoader.h
    include/Content/icImage.h
    include/Core/Application/Window/icWindow.h
    include/Core/Application/Window/icWindowOSX.h
    include/Core/Application/Window/icWindowWIN.h
    include/Core/Application/Window/icWindowX11.h
    include/Core/Application/Window/icWinFlags.h
    include/Core/Application/icApplication.h
    include/Core/Events/icDelegate.h
    include/Core/Events/icEvent.h
    include/Core/Events/icMulticastDelegate.h
    include/Core/GXDevice/icGLext.h
    include/Core/GXDevice/icGXDevice.h
    include/Core/GXDevice/icGXDeviceDX11.h
    include/Core/GXDevice/icGXDeviceDX9.h
    include/Core/GXDevice/icGXDeviceGL.h
    include/Core/GXDevice/icGXDeviceGLES.h
    include/Core/GXDevice/icGXDeviceGLES2.h
    include/Core/IO/RapidXml/rapidxml.hpp
    include/Core/IO/RapidXml/rapidxml_iterators.hpp
    include/Core/IO/RapidXml/rapidxml_print.hpp
    include/Core/IO/RapidXml/rapidxml_utils.hpp
    include/Core/IO/icButtonMap.h
    include/Core/IO/icFile.h
    include/Core/IO/icInput.h
    include/Core/Threading/icMutex.h
    include/Core/Threading/icThread.h
    include/Core/icDebug.h
    include/Core/icGlobals.h
    include/Math/Matrix/icMatrix33.h
    include/Math/Matrix/icMatrix44.h
    include/Math/Vector/icQuat.h
    include/Math/Vector/icVector2.h
    include/Math/Vector/icVector2Int.h
    include/Math/Vector/icVector3.h
    include/Math/Vector/icVector4.h
    include/Math/ic2DCollision.h
    include/Math/icAABBox.h
    include/Math/icBox.h
    include/Math/icColor.h
    include/Math/icCommonMath.h
    include/Math/icPane.h
    include/Math/icRand.h
    include/Math/icSearch.h
    include/Math/icSort.h
    include/Memory/AllocationDebug.h
    include/Memory/dlMemoryPool.h
    include/Memory/icAbstractMemoryPool.h
    include/Memory/icMaxHeap.h
    include/Memory/icMemory.h
    include/Memory/icMemoryEvent.h
    include/Memory/icMemoryPool.h
    include/Memory/icMinHeap.h
    include/Memory/icString.h
    include/Memory/icSystemMemoryPool.h
    include/Memory/tlsfMemoryPool.h
    include/Network/icSocket.h
    include/ObjectModel/icEnum.h
    include/ObjectModel/icField.h
    include/ObjectModel/icObject.h
    include/ObjectModel/icProperty.h
    include/ObjectModel/icType.h
    include/Render/Camera/icCamera.h
    include/Render/Camera/icChaseCam.h
    include/Render/Camera/icMaxCam.h
    include/Render/Font/icFont.h
    include/Render/Font/icFontDX9.h
    include/Render/Font/icFontGL.h
    include/Render/IndexBuffer/icIndexBuf.h
    include/Render/IndexBuffer/icIndexBufDX9.h
    include/Render/IndexBuffer/icIndexBufGL.h
    include/Render/IndexBuffer/icIndexBufGLES.h
    include/Render/Lighting/icLight.h
    include/Render/Texture/icTexture.h
    include/Render/Texture/icTextureDX9.h
    include/Render/Texture/icTextureGL.h
    include/Render/Texture/icTextureGLES.h
    include/Render/VertBuffer/icVertBuffer.h
    include/Render/VertBuffer/icVertBufferDX9.h
    include/Render/VertBuffer/icVertBufferGL.h
    include/Render/VertBuffer/icVertBufferGLES.h
    include/Render/icMaterial.h
    include/Render/icMesh.h
    include/Render/icModel.h
    include/Render/icRenderObject.h
    include/Scripting/Debugging/IDebugger.h
    include/Scripting/Debugging/IDebuggerEventArgs.h
    include/Scripting/Debugging/LuaDebugger.h
    include/Scripting/Game.h
    include/Scripting/IScriptDomain.h
    include/Scripting/LuaScriptDomain.h
    include/UI/icButton.h
    include/UI/icFrame.h
    include/UI/icSlider.h
    include/UI/icWidget.h
    include/Util/icFileName.h
    include/Util/icScreenCapture.h
    include/Util/icSettingsFile.h
    include/Util/icStateMachine.h
    include/Util/icTime.h
    src/AI/Pathing/icAStar.cpp
    src/AI/Pathing/icThetaStar.cpp
    src/AI/Pathing/icVisibilityAStar.cpp
    src/Audio/icSoundAL.cpp
    src/Audio/icSoundDevice.cpp
    src/Audio/icSoundDeviceAL.cpp
    src/Content/icContentLoader.cpp
    src/Content/icImage.cpp
    src/Content/icModelLoader.cpp
    src/Content/icPathingLoader.cpp
    src/Content/icTextureLoader.cpp
    src/Core/Application/Window/icWindow.cpp
    src/Core/Application/Window/icWindowOSX.cpp
    src/Core/Application/Window/icWindowWIN.cpp
    src/Core/Application/Window/icWindowX11.cpp
    src/Core/Application/icApplication.cpp
    src/Core/Events/icDelegate.cpp
    src/Core/Events/icEvent.cpp
    src/Core/Events/icMulticastDelegate.cpp
    src/Core/GXDevice/icGLext.cpp
    src/Core/GXDevice/icGXDevice.cpp
    src/Core/GXDevice/icGXDeviceDX11.cpp
    src/Core/GXDevice/icGXDeviceDX9.cpp
    src/Core/GXDevice/icGXDeviceGL.cpp
    src/Core/GXDevice/icGXDeviceGLES.cpp
    src/Core/GXDevice/icGXDeviceGLES2.cpp
    src/Core/IO/icFileOSX.cpp
    src/Core/IO/icFileWin.cpp
    src/Core/IO/icInputOSX.cpp
    src/Core/IO/icInputWIN.cpp
    src/Core/Threading/icThread.cpp
    src/Core/icDebug.cpp
    src/Math/Matrix/icMatrix33.cpp
    src/Math/Matrix/icMatrix44.cpp
    src/Math/Vector/icVector2.cpp
    src/Math/Vector/icVector2Int.cpp
    src/Math/Vector/icVector3.cpp
    src/Math/Vector/icVector4.cpp
    src/Math/icColor.cpp
    src/Math/icRand.cpp
    src/Memory/AllocationDebug.cpp
    src/Memory/icAbstractMemoryPool.cpp
    src/Memory/icMemory.cpp
    src/Memory/icString.cpp
    src/Network/icSocket.cpp
    src/ObjectModel/icObject.cpp
    src/ObjectModel/icType.cpp
    src/Render/Camera/icCamera.cpp
    src/Render/Camera/icChaseCam.cpp
    src/Render/Camera/icMaxCam.cpp
    src/Render/Font/icFontDX9.cpp
    src/Render/Font/icFontGL.cpp
    src/Render/IndexBuffer/icIndexBufDX9.cpp
    src/Render/IndexBuffer/icIndexBufGL.cpp
    src/Render/IndexBuffer/icIndexBufGLES.cpp
    src/Render/Texture/icTextureDX9.cpp
    src/Render/Texture/icTextureGL.cpp
    src/Render/Texture/icTextureGLES.cpp
    src/Render/VertBuffer/icVertBufferDX9.cpp
    src/Render/VertBuffer/icVertBufferGL.cpp
    src/Render/VertBuffer/icVertBufferGLES.cpp
    src/Render/icMaterial.cpp
    src/Render/icMesh.cpp
    src/Render/icModel.cpp
    src/Render/icRenderObject.cpp
    src/Scripting/Debugging/IDebuggerEventArgs.cpp
    src/Scripting/Debugging/LuaDebugger.cpp
    src/Scripting/Game.cpp
    src/Scripting/IScriptDomain.cpp
    src/Scripting/LuaScriptDomain.cpp
    src/UI/icButton.cpp
    src/UI/icFrame.cpp
    src/UI/icSlider.cpp
    src/UI/icWidget.cpp
    src/Util/icFileName.cpp
    src/Util/icScreenCapture.cpp
    src/Util/icSettingsFile.cpp
    src/Util/icStateMachine.cpp
    src/Util/icTime.cpp)

include_directories( src include 3rdparty )

add_library(ICEngine ${SOURCE_FILES})